# open-fdd-automated-testing

./: .gitignore  README.md  openfdd_docs_gap_review_20260422.md  pyproject.toml  run_midnight_suite.cmd  run_overnight_bacnet.cmd
.github/workflows/: docs-pages.yml  docs-pdf.yml
config/: drivers.yaml
config/schema_packs/: README.md  bacnet-driver.json  hvac-fdd.json
dashboard/: index.html  progress.json
docs/: _config.yml  bacnet_fault_verification.md  cloning_and_porting.md  configuration.md  contributing.md  examples.md  expression_rule_cookbook.md  frontend.md  getting_started.md  index.md  openclaw_integration.md  openclaw_subscription_setup.md  openfdd_integrity_sweep.md  operational_states.md  overnight_review.md  testing_plan.md
docs/api/: platform.md
docs/appendix/: ai_pr_review_playbook.md  api_reference.md  index.md  technical_reference.md
docs/bacnet/: fault_verification.md  graph_context.md  index.md  overview.md
docs/concepts/: big_picture_gaps.md  cloud_export.md  context_and_recordkeeping.md  index.md  operational_states.md
docs/howto/: cloning_and_porting.md  danger_zone.md  engine_only_iot.md  fake_fault_schedule_monitoring.md  index.md  openclaw_agent_bootstrap.md  openclaw_bacnet_docker_and_human_modeling.md  openclaw_subscription_setup.md  operations.md  quick_reference.md  verification.md
docs/modeling/: ai_assisted_energy_calculations.md  ai_assisted_tagging.md  index.md  llm_workflow.md
docs/operations/: drivers_yaml_tutorial.md  index.md  mcp_rag_service.md  openclaw_context_bootstrap.md  openfdd_integrity_sweep.md  overnight_review.md  testing_plan.md
examples/csv/: AHU7.csv
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
openclaw/: HANDOFF_PROTOCOL.md  README.md  SKILL.md
openclaw/bench/: README_modbus_fake_device.md  modbus_fake_device_sample.json
openclaw/references/: first-session-checklist.md  future_operator_clones.md  (+6 more)
ops_knowledge/: README.md
pdf/: open-fdd-automated-testing-docs.txt
reports/: overnight-summary-2026-03-23.md
scripts/: _onboard_cli.py  bootstrap.sh  build_docs_pdf.py  build_mcp_rag_index.py  fake_modbus_device.py  onboard_backfill_smoke.py  onboard_list_metadata.py  selene_smoke.py  smoke_bacnet_api_to_gateway.sh
site_memory/: README.md
stack/: Dockerfile.api  Dockerfile.bacnet_scraper  Dockerfile.fdd_loop  Dockerfile.hoststats  Dockerfile.mcp_rag  Dockerfile.weather_scraper  docker-compose.yml
(+118 files in other folders)
